# InsureBTC

./: .env.sample  Cargo.toml  canister_ids.json  dfx.json  package-lock.json  package.json
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/icp_bqbtc/: icp_bqbtc.wasm  index.js  init_args.txt  service.did.d.ts  service.did.js
.dfx/local/canisters/icp_cover/: constructor.did  constructor.old.did  icp_cover.wasm  index.js  init_args.txt  service.did.js
.dfx/local/canisters/icp_frontend/: index.js
.dfx/local/canisters/icp_governance/: constructor.old.did  icp_governance.wasm  index.js  init_args.txt
.dfx/local/canisters/icp_pool/: constructor.old.did  icp_pool.wasm  index.js  service.did.js
.dfx/local/canisters/idl/: ulvla-h7777-77774-qaacq-cai.did
.dfx/local/lsp/: u6s2n-gx777-77774-qaaba-cai.did  uxrrr-q7777-77774-qaaaq-cai.did
src/declarations/icp_bqbtc/: index.d.ts  index.js
src/declarations/icp_cover/: icp_cover.did.d.ts  icp_cover.did.js  index.d.ts  index.js
src/declarations/icp_frontend/: index.d.ts  index.js
src/declarations/icp_governance/: icp_governance.did.d.ts  icp_governance.did.js  index.d.ts  index.js
src/declarations/icp_pool/: icp_pool.did  icp_pool.did.d.ts  icp_pool.did.js  index.d.ts  index.js
src/icp_bqbtc/: Cargo.toml  bqbtc.did  lib.rs
src/icp_cover/: Cargo.toml  lib.rs  types.rs
src/icp_frontend/: index.html  package.json  vite.config.ts
src/icp_frontend/src/: App.css  App.tsx  index.css
src/icp_governance/: Cargo.toml  governance.did  lib.rs  types.rs
src/icp_pool/: Cargo.toml  lib.rs  types.rs
(+14 files in other folders)
