[package]
name = "pool"                 
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
candid.workspace = true
serde.workspace = true
icrc-ledger-types = "0.1.8"
ic-ledger-types = "0.14.0"
evm-rpc-canister-types.workspace = true